--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="index.css" />
     </head>
     <body>
         <div class="wrapper">
             <header>
                 <div class="upper">
-                    <img src="img/logo.png" alt="Логотип" class="logotyp" />
+                    <img src="img.png" alt="Логотип" class="logotyp" />
                     <nav class="menu">
                         <ul>
                             <li><a href="">Створити розклад</a></li>
